[gd_scene load_steps=7 format=3 uid="uid://d11mjw1kfmapi"]

[ext_resource type="Texture2D" uid="uid://dhxy8j6e76eg8" path="res://assets/Prop/Fan.png" id="1"]
[ext_resource type="Script" uid="uid://ceam3wmge4fgc" path="res://src/Prop/Fan.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cxgdthmm78g5k" path="res://assets/SFX/Placeholder/snd_switchweapon.ogg" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 24)

[sub_resource type="Animation" id="2"]
resource_name = "Spin"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anuvr"]
_data = {
&"Spin": SubResource("2")
}

[node name="Fan" type="Area2D"]
collision_layer = 0
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(0, -8)
texture = ExtResource("1")
hframes = 8

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_anuvr")
}
autoplay = "Spin"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
